--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="index.html" rel="noopener noreferrer">Home</a>
         <a href="about.html" rel="noopener noreferrer">About</a>
         <a href="contact.html" rel="noopener noreferrer">Contact</a>
+        <a href="sample-css.html" rel="noopener noreferrer">CSS Samples</a>
       </nav>
     </header>
     <article>
