--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Page</title>
+    <link rel="stylesheet" href="styles/style.css" />
     <nav>
       <a href="index.html" rel="noopener noreferrer">Home</a>
       <a href="about.html" rel="noopener noreferrer">About</a>
